LANG-3: Добавление страниц регистрации и логина

--- a/client/src/common/localization/ru/common.json
+++ b/client/src/common/localization/ru/common.json
@@ -1,4 +1,11 @@
 {
   "404": "404",
-  "LOADING...": "Загрузка..."
+  "LICENSE": "LearningAcademy ©2020 Created by PolytechTeam",
+  "LOADING...": "Загрузка...",
+  "USER": {
+    "TYPE": {
+      "STUDENT": "Ученик",
+      "TEACHER": "Учитель"
+    }
+  }
 }
