LANG-4: Инициализая общего store и slice для авторизации

--- a/client/src/common/localization/ru/common.json
+++ b/client/src/common/localization/ru/common.json
@@ -3,7 +3,7 @@
   "LICENSE": "LearningAcademy ©2022 Created by PolytechTeam",
   "LOADING...": "Загрузка...",
   "USER": {
-    "TYPE": {
+    "ROLE": {
       "STUDENT": "Ученик",
       "TEACHER": "Учитель"
     }
