LANG-16: Добавление страницы групп

--- a/client/src/common/localization/ru/dashboard.json
+++ b/client/src/common/localization/ru/dashboard.json
@@ -2,6 +2,7 @@
   "LOGOUT": "Выйти",
   "MENU": {
     "HOMEWORK": "Домашнее задание",
-    "PROFILE": "Профиль"
+    "PROFILE": "Профиль",
+    "GROUPS": "Группы"
   }
 }
