LANG-10: Добавление списка заданий на страницу дз

--- a/client/src/common/localization/ru/auth.json
+++ b/client/src/common/localization/ru/auth.json
@@ -9,5 +9,8 @@
   "PASSWORDS_ARE_NOT_EQUAL": "Пароли не совпадают",
   "REGISTER": "Зарегистрироваться",
   "REGISTRATION": "Регистрация",
+  "SHORT_PASSWORD": "Слишком короткие пароль",
+  "SHORT_USERNAME": "Слишком короткое имя пользователя",
+  "INVALID_USERNAME": "Недопустимое имя пользователя",
   "USERNAME": "Имя пользователя"
 }
