LANG-18: Добавление модалки для групп

--- a/client/src/common/localization/ru/common.json
+++ b/client/src/common/localization/ru/common.json
@@ -8,6 +8,9 @@
   "LINKS": "Ссылки",
   "LOADING...": "Загрузка...",
   "NOT_DONE": "Не выполнено",
+  "NO_DATA": "Нет данных",
+  "SHOW_ALL": "Показать всё",
+  "SHOW_MORE": "Показать ещё",
   "TABLE": {
     "FILTER_TITLE": "Фильтры",
     "FILTER_CONFIRM": "Ок",
