--- a/client/src/common/localization/ru/common.json
+++ b/client/src/common/localization/ru/common.json
@@ -1,14 +1,19 @@
 {
   "404": "404",
   "ADD": "Добавить",
+  "CITY": "Город",
   "DELETE": "Удалить",
   "DONE": "Выполнено",
   "EDIT": "Редактировать",
+  "FIRST_NAME": "Имя",
+  "LAST_NAME": "Фамилия",
   "LICENSE": "LearningAcademy ©2022 Создано командой Политеха",
   "LINKS": "Ссылки",
   "LOADING...": "Загрузка...",
   "NOT_DONE": "Не выполнено",
   "NO_DATA": "Нет данных",
+  "PHONE": "Телефон",
+  "SAVE": "Сохранить",
   "SHOW_ALL": "Показать всё",
   "SHOW_MORE": "Показать ещё",
   "TABLE": {
