LANG-00000: Рефактор АПИ

--- a/client/src/common/localization/ru/common.json
+++ b/client/src/common/localization/ru/common.json
@@ -2,10 +2,10 @@
   "404": "404",
   "ARE_YOU_SURE_YOU_WANT_TO_DELETE_COURSE": "Вы точно хотите удалить курс {{name}}?",
   "ADD": "Добавить",
-  "CITY": "Город",
   "DELETE": "Удалить",
   "DONE": "Выполнено",
   "EDIT": "Редактировать",
+  "EMAIL": "E-mail",
   "FIRST_NAME": "Имя",
   "LAST_NAME": "Фамилия",
   "LICENSE": "LearningAcademy ©2022 Создано командой Политеха",
