--- a/client/src/common/localization/ru/courses.json
+++ b/client/src/common/localization/ru/courses.json
@@ -31,6 +31,6 @@
     "FRENCH": "Французский",
     "GERMANY": "Немецкий"
   },
-  "OPEN_COURSE_MODAL_BUTTON": "Создать/Редактировать Курс",
+  "COURSE_MODAL_TITLE": "Создать/Редактировать Курс",
   "STUDENTS": "Студенты"
 }
