--- a/client/src/common/localization/ru/homework.json
+++ b/client/src/common/localization/ru/homework.json
@@ -9,5 +9,33 @@
       "NAME": "Название"
     }
   },
-  "HOMEWORK_FETCH_ERROR": "Возникла ошибка загрузки дз"
+  "HOMEWORK_FETCH_ERROR": "Возникла ошибка загрузки дз",
+  "HOMEWORK_MODAL_FIELDS": {
+    "COURSE": {
+      "ERROR": "Пожалуйста, выберите курс",
+      "LABEL": "Курс",
+      "PLACEHOLDER": "Выберите курс"
+    },
+    "DEADLINE": {
+      "ERROR": "Пожалуйста, введите срок выполнения",
+      "LABEL": "Срок выполнения",
+      "PLACEHOLDER": "Введите срок выполнения"
+    },
+    "DESCRIPTION": {
+      "ERROR": "Пожалуйста, введите описание",
+      "LABEL": "Описание",
+      "PLACEHOLDER": "Введите описание"
+    },
+    "LINK": {
+      "ERROR": "Пожалуйста, введите ссылку",
+      "LABEL": "Ссылка",
+      "PLACEHOLDER": "Введите ссылку"
+    },
+    "NAME": {
+      "ERROR": "Пожалуйста, введите имя",
+      "LABEL": "Имя",
+      "PLACEHOLDER": "Выберите имя"
+    }
+  },
+  "HOMEWORK_MODAL_TITLE": "Создать/редактировать домашнее задание"
 }
