LANG-00000: Добавление поддержки китайского языка

--- a/client/src/common/localization/ru/courses.json
+++ b/client/src/common/localization/ru/courses.json
@@ -27,6 +27,7 @@
     "UPPER_INTERMEDIATE": "B2 Выше Средний"
   },
   "LANGUAGES": {
+    "CHINESE": "Китайский",
     "ENGLISH": "Английский",
     "FRENCH": "Французский",
     "GERMANY": "Немецкий"
